# platform_abstraction_layer

./: Cargo.toml  README.md
src/: lib.rs  tests.rs
src/backends/: mod.rs  pointer_manager.rs  post_processing.rs  state_tracker.rs  virtual_platform.rs
src/backends/graphic_backends/: mod.rs
src/backends/graphic_backends/vulkano/: mod.rs
src/backends/linux/: common.rs  mod.rs
src/backends/linux/input_backends/: mod.rs
src/backends/linux/input_backends/libinput/: mod.rs
src/backends/linux/input_backends/libinput/handlers/: keyboard.rs  pointer.rs
src/backends/linux/libinput_vulkano/: mod.rs
src/backends/linux/libinput_wgpu/: mod.rs
src/backends/linux/libinput_wgpu/handlers/: keyboard.rs  mod.rs  pointer.rs
src/backends/linux/partial_backends/: mod.rs
src/backends/linux/partial_backends/libinput/: mod.rs
src/backends/linux/wayland/: conv.rs  mod.rs
src/backends/linux/wayland/handlers/: keyboard.rs  mod.rs  pointer.rs
src/backends/linux/xcb/: mod.rs
src/backends/linux/xcb/handlers/: keyboard.rs  mod.rs
src/backends/output_backends/: mod.rs  virtual_output_backend.rs
src/backends/partial_backends/: mod.rs  new_output_manager.rs  output_manager.rs  surface_manager.rs  vulkano.rs
src/backends/seat_backends.rs/: mod.rs
src/definitions/: common.rs  contexts.rs  errors.rs  external_context.rs  mod.rs  output.rs  seat.rs  surface.rs
src/definitions/event/: mod.rs  output_event.rs  surface_event.rs
src/definitions/event/seat_event/: cursor_event.rs  gamepad_event.rs  keyboard_event.rs  mod.rs  touch_event.rs
src/definitions/request/: mod.rs  output_request.rs  surface_request.rs
src/definitions/request/seat_request/: cursor_request.rs  gamepad_request.rs  keyboard_request.rs  mod.rs  touch_request.rs
