[package]
name = "pal"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "*"
raw-window-handle = "*"
log = "*"
petgraph = "*"
simple-matrix = "*"
keyboard-types = {version="*",default-features=false}
wgpu = {version = "*",optional=true}
libc = {version = "*",optional=true}
vulkano = {version = "*",optional=true}
parry2d = {version = "*",optional=true}


[dev-dependencies]
env_logger = "*"

[target.'cfg(target_os="linux")'.dependencies]
keystroke_decoder = {path="../keystroke_decoder",optional=true}
input = {version = "*",features=["udev"],optional=true}
smithay-client-toolkit = {version="*",optional=true}
x11rb = {version = "*", features=["randr","allow-unsafe-code"],default-features=false,optional=true}


[features]
default = ["xcb_platform","post_processing","state_tracker","virtual_platform"]
wayland_platform = ["smithay-client-toolkit","linux_platform"]
xcb_platform = ["x11rb","linux_platform"]
libinput_vulkano_platform = ["libinput_backend","vulkano_backend"]

any_platform = []
linux_platform = ["keystroke_decoder","any_platform"]
virtual_platform = ["parry2d"]

libinput_backend = ["input","keystroke_decoder","libc"]
vulkano_backend = ["vulkano"]

external_context = []

state_tracker = []
post_processing = []
