[package]
name = "pal"
version = "0.1.0"
authors = ["Fabio Sgamma <uniformbuffer3@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "*"
raw-window-handle = "*"
log = "*"
petgraph = "*"
simple-matrix = "*"
keyboard-types = {version="*",default-features=false}
wgpu_standard = {version="0.9",package="wgpu", optional=true}
wgpu_custom = {git="https://github.com/Uniformbuffer3/wgpu",branch="external_memory_direct_display", package="wgpu", optional=true}
libc = {version = "*",optional=true}
vulkano = {version = "*",optional=true}
vulkano-shaders = {version = "*",optional=true}
parry2d = {version = "*",optional=true}
smithay = {git="https://github.com/Smithay/smithay", branch="master",default-features=false,features=["backend_libinput"]}
tokio = {version = "*",features=["net","rt"]}
calloop = "*"

[dev-dependencies]
env_logger = "*"

[target.'cfg(target_os="linux")'.dependencies]
keystroke_decoder = {git="https://github.com/Uniformbuffer3/keystroke_decoder.git",optional=true}
input = {version = "*",features=["udev"],optional=true}
smithay-client-toolkit = {version="*",optional=true}
x11rb = {version = "*", features=["randr","allow-unsafe-code","xkb","xfixes"],default-features=false,optional=true}


[features]
default = ["xcb_platform","parry2d","wgpu_custom_backend"]

#Platforms
wayland_platform = ["smithay-client-toolkit","linux_platform"]
xcb_platform = ["x11rb","linux_platform"]
libinput_vulkano_platform = ["libinput_backend","vulkano_backend"]

#Platform utils
any_platform = []
linux_platform = ["keystroke_decoder","any_platform"]
virtual_platform = ["parry2d"]

#Backends
libinput_backend = ["input","keystroke_decoder","libc"]
vulkano_backend = ["vulkano"]
wgpu_backend = []
wgpu_standard_backend = ["wgpu_standard","wgpu_backend"]
wgpu_custom_backend = ["wgpu_custom","wgpu_backend"]

#Utils
state_tracker = []
post_processing = []

[patch."https://github.com/Uniformbuffer3/wgpu.git"]
wgpu_custom = { path = "../wgpu/wgpu" ,package="wgpu"}

